# Lab2_ML

./: README.md
INFO/: README.md
lab2Front/: package-lock.json  package.json
lab2Front/src/: App.tsx  index.tsx
lab2Front/src/pages/: AnalyticsPage.tsx  HomePage.tsx  ProductsPage.tsx  StoresPage.tsx
lab2Front/src/routes/: Router.tsx
lab2_ML/: .gitignore  main.py  pyproject.toml
lab2_ML/api/: dependencies.py
lab2_ML/api/routes/: main.py  product.py  sale.py  store.py
lab2_ML/db/: database.py
lab2_ML/helpers/: utils.py
lab2_ML/repositories/: base.py  product.py  sale.py  store.py
lab2_ML/services/: product.py  sale.py  store.py
